# tldr

./: .cursorrules  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  DEAD_CODE_CLEANUP.md  Dockerfile  README.md  SLACK_APP_SETUP.md  SLACK_SETUP.md  build-local.sh  justfile  package-lock.json  slack-app-manifest.yaml  slack-app-manifest.yaml.template
.github/workflows/: deploy.yml
bolt-ts/: .gitignore  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
bolt-ts/src/: app.ts  blocks.ts  config.ts  index.ts  intent.ts  loading_messages.ts  security.ts  sqs.ts  thread_state.ts  types.ts
bolt-ts/src/ai/: anthropic.ts  (+3 more)
bolt-ts/tests/: blocks.test.ts  config.test.ts  intent.test.ts  loading_messages.test.ts  security.test.ts  thread_state.test.ts
cdk/: env.example  eslint.config.js  package-lock.json  package.json  tsconfig.json
cdk/lib/: tldr-stack.ts
docs/: SLACK_APP_SETUP.md  ai-app-unread-user-token-checklist.md  ai-app-user-interaction-flows.html  ai_app_first_rewrite_bolt_js.md  build-and-deployment.md  build_and_deployment.md  enhanced_home_and_prompts.md  master_ai_workflow_migration_plan.md  rich_image_summaries.md  slack-configuration.md  slack_configuration.md  streaming_responses.md  user_workflows.md
docs/adr/: 0001-initial-architecture-assessment.md  0002-maintain-stateless-architecture.md  README.md  template.md
lambda/: Cargo.toml  README.md
lambda/.cargo/: config.toml
lambda/src/: bot.rs  canvas.rs  errors.rs  formatting.rs  lib.rs  lib.rs.bak  main.rs  prompt.rs  response.rs  slack_parser.rs  views.rs
lambda/src/adapters/: mod.rs
lambda/src/adapters/messaging/: mod.rs
lambda/src/adapters/persistence/: mod.rs
lambda/src/adapters/web/: mod.rs
lambda/src/ai/: client.rs  mod.rs  prompt_builder.rs  sse.rs
lambda/src/api/: event_handler.rs  handler.rs  helpers.rs  interactive_handler.rs  mod.rs  oauth.rs  parsing.rs  signature.rs  slash_handler.rs  sqs.rs  view_submission.rs
lambda/src/application/: mod.rs
lambda/src/application/handlers/: mod.rs
lambda/src/application/services/: mod.rs
lambda/src/application/use_cases/: mod.rs
lambda/src/clients/: llm_client.rs  mod.rs  slack_client.rs
lambda/src/core/: config.rs  mod.rs  models.rs  security.rs  user_tokens.rs
lambda/src/core/features/: collect.rs  deliver.rs  mod.rs  summarize.rs
lambda/src/domains/: mod.rs
lambda/src/domains/messaging/: mod.rs
lambda/src/domains/summarization/: mod.rs
lambda/src/domains/user_management/: mod.rs
lambda/src/features/: api.rs  collect.rs  deliver.rs  mod.rs  summarize.rs  worker.rs
lambda/src/features/api/: mod.rs  parsing.rs  sqs.rs
lambda/src/infrastructure/: mod.rs
lambda/src/infrastructure/aws/: mod.rs
lambda/src/infrastructure/openai/: mod.rs
lambda/src/infrastructure/persistence/: mod.rs
lambda/src/infrastructure/slack/: mod.rs
lambda/src/slack/: bot.rs  canvas_helper.rs  client.rs  command_parser.rs  message_formatter.rs  mod.rs  modal_builder.rs  response_builder.rs  sanitize.rs
lambda/src/utils/: filters.rs  links.rs  mime.rs  mod.rs
lambda/src/worker/: deliver.rs  handler.rs  mod.rs  streaming.rs  summarize.rs
lambda/tests/: bot_tests.rs  errors_tests.rs  formatting_tests.rs  logging_tests.rs  prompt_tests.rs  response_tests.rs  slack_parser_tests.rs  views_tests.rs
scripts/: agent-run-qa.sh  agent-setup.sh  deploy-slack-manifest.sh
terraform/: .terraform.lock.hcl  README.md  apigateway.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
(+27 files in other folders)
