[package]
name = "tldr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tldr-api"
path = "src/bin/api.rs"
required-features = ["api"]

[[bin]]
name = "tldr-worker"
path = "src/bin/bootstrap.rs"
required-features = ["worker"]

[features]
default = []
api = []
worker = []
debug-logs = []

[dependencies]
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
aws-config = "0.54.1"
aws-sdk-sqs = "0.24.0"
slack-morphism = { version = "1.17.0", features = ["hyper"] }
openai-api-rs = "6.0.3"
anyhow = "1.0"
thiserror = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
regex = "1.10.2"
lazy_static = "1.4.0"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
tokio-retry = "0.3.0"
html2text = "0.6"
base64 = "0.22"
url = "2.5"
mime_guess = "2.0"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"
chrono = "0.4"
