[package]
name = "tldr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tldr-worker"
path = "src/bin/bootstrap.rs"
required-features = ["worker"]

[features]
default = []
worker = []
debug-logs = []

[dependencies]
# Updated versions
lambda_runtime = "0.14.3"
aws-config = { version = "1.8.5", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.81.0"
aws-sdk-ssm = "1.81.0"
slack-morphism = { version = "2.14.0", features = ["hyper"] }
html2text = "0.15.3"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"
thiserror = "2.0.15"

# Keep these as-is (already up-to-date or compatible)
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
openai-api-rs = { version = "6.0.3", default-features = false, features = ["rustls"] }
anyhow = "1.0"
base64 = "0.22.1"

regex = "1.10.2"
tokio-retry = "0.3.0"
url = "2.5"
mime_guess = "2.0"
uuid = { version = "1", features = ["v4"] }